correction images and index.html

--- a/index.html
+++ b/index.html
@@ -11,22 +11,20 @@
     <!-- Шапка -->
     <header>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li>
-            <a href="">WEBSTUDIO</a>
-          </li>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="Studio">Studio</a></li>
+          <li><a href="Portfolio">Portfolio</a></li>
+          <li><a href="Contacts">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
+      <address>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
-      </ul>
+      </address>
     </header>
     <main>
-      <!--  -->
+      <!-- Герой -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
@@ -71,23 +69,29 @@
         <ul>
           <li>
             <a href="">
-              <img src="/images/Rectangle71.svg" alt="монітор" width="360"
+              <img
+                src="./images/rectangle71.jpg"
+                alt="монітор"
+                width="360"
+                height="300"
             /></a>
           </li>
           <li>
             <a href=""
               ><img
-                src="/images/Rectangle71(1).svg"
+                src="./images/rectangle71(1).jpg"
                 alt="додаток на смартфоні "
                 width="360"
+                height="300"
             /></a>
           </li>
           <li>
             <a href=""
               ><img
-                src="/images/Rectangle71(2).svg"
+                src="./images/rectangle71(2).jpg"
                 alt="смартфон в руці"
                 width="360"
+                height="300"
             /></a>
           </li>
         </ul>
@@ -95,35 +99,52 @@
       <!-- Команда -->
       <section>
         <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/teamcard1.jpg"
+              alt="учасник команди"
+              width="264"
+            />
 
-        <a href="">
-          <img src="/images/teamcard1.jpg" alt="учасник команди" />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </a>
-        <a href=""
-          ><img src="/images/teamcard2.jpg" alt="учасник команди" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/teamcard2.jpg"
+              alt="учасник команди"
+              width="264"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/teamcard3.jpg"
+              alt="учасник команди"
+              width="264"
+            />
 
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p></a
-        >
-        <a href="">
-          <img src="/images/teamcard3.jpg" alt="учасник команди" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/teamcard4.jpg"
+              alt="учасник команди"
+              width="264"
+            />
 
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p></a
-        >
-        <a href="">
-          <img src="/images/teamcard4.jpg" alt="учасник команди" />
-
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p></a
-        >
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <!-- Підвал(футер) -->
     <footer>
-      <a href="">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
