corrected index.html

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="Studio">Studio</a></li>
-          <li><a href="Portfolio">Portfolio</a></li>
-          <li><a href="Contacts">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -70,31 +70,28 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <a href="">
-              <img
-                src="./images/rectangle71.jpg"
-                alt="монітор"
-                width="360"
-                height="300"
-            /></a>
+            <img
+              src="./images/rectangle71.jpg"
+              alt="монітор"
+              width="360"
+              height="300"
+            />
           </li>
           <li>
-            <a href=""
-              ><img
-                src="./images/rectangle71(1).jpg"
-                alt="додаток на смартфоні "
-                width="360"
-                height="300"
-            /></a>
+            <img
+              src="./images/rectangle71(1).jpg"
+              alt="додаток на смартфоні "
+              width="360"
+              height="300"
+            />
           </li>
           <li>
-            <a href=""
-              ><img
-                src="./images/rectangle71(2).jpg"
-                alt="смартфон в руці"
-                width="360"
-                height="300"
-            /></a>
+            <img
+              src="./images/rectangle71(2).jpg"
+              alt="смартфон в руці"
+              width="360"
+              height="300"
+            />
           </li>
         </ul>
       </section>
